--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://www.svgrepo.com/show/530384/food.svg"
+      href="https://i.ibb.co/0YLfGdZ/logo.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zero-Waste.bd</title>
